se quita el item extra

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div id="holidaysContainer" class="d-none">
             <div class="row" id="holidaysList">
-                <!-- Los feriados se cargarán aquí -->
+                <!-- Cards -->
             </div>
         </div>
     </div>
